# annealation

./: .eslintrc.json  .prettierrc  LICENSE  README.md  index.html  package-lock.json  package.json  snowpack.config.js  vite.config.js
docs/: build-manifest.json  index.css  index.html
docs/assets/: bh-thread-9e94b9c5.js  bh-thread-sab-3d4ed47f.js  index-41098021.js  index-51469ff9.js  index-c0e96d54.js  p2p-thread-d5dcb819.js  p2p-thread-sab-5248d623.js  wasm_bg.wasm
public/: index.html
src/: configurations.js  fragmentShader.glsl  gravity.js  helpers.js  index.js  presets.js  utils.js  vertexShader.glsl
src/gravity/: bh-threaded-sab.js  bh-threaded.js  bh-unoptimized.js  bh.js  fmm.js  fmmkern.js  gemsffm.js  gemsfmm_import.js  gravity.js  none.js  p2p-threaded-sab.js  p2p-threaded.js  p2p.js
src/gravity/worker/: bh-cell.js  bh-thread-sab.js  bh-thread.js  p2p-thread-sab.js  p2p-thread.js
wasm/: Cargo.toml
wasm/.cargo/: config.toml
wasm/src/: bh.rs  fmm.rs  gravity.rs  lib.rs  none.rs  p2p.rs  p2p_simd.rs  projector.rs  utils.rs
wasm/src/p2p_thread/: mod.rs  pool.rs
