[package]
name = "wasm"
version = "0.1.0"
authors = ["Florian Mounier"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen = { version = "0.2.70", features = ['serde-serialize'] }
console_error_panic_hook = { version = "0.1.6", optional = true }
num-complex = "0.3.1"
js-sys = "0.3.47"
serde = { version = "1.0.123", features = ["derive"] }

[dev-dependencies]
wasm-bindgen-test = "0.3.20"

[profile.dev]
# Tell `rustc` to optimize for small code size.
debug = true
opt-level = 3
lto = true

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = 3
lto = true

[package.metadata.wasm-pack.profile.dev]
wasm-opt = ['-O4']

[package.metadata.wasm-pack.profile.dev.wasm-bindgen]
debug-js-glue = true
demangle-name-section = true
dwarf-debug-info = true

[package.metadata.wasm-pack.profile.release]
wasm-opt = ['-O4']

[package.metadata.wasm-pack.profile.release.wasm-bindgen]
debug-js-glue = false
demangle-name-section = true
dwarf-debug-info = false
